syntax = "proto3";

package bids.v1;

option go_package = "github.com/floroz/gavel/pkg/proto/bids/v1;bidsv1";

service BidService {
  rpc PlaceBid(PlaceBidRequest) returns (PlaceBidResponse);

  // Item management
  rpc CreateItem(CreateItemRequest) returns (CreateItemResponse);
  rpc GetItem(GetItemRequest) returns (GetItemResponse);
  rpc ListItems(ListItemsRequest) returns (ListItemsResponse);
  rpc ListSellerItems(ListSellerItemsRequest) returns (ListSellerItemsResponse);
  rpc UpdateItem(UpdateItemRequest) returns (UpdateItemResponse);
  rpc CancelItem(CancelItemRequest) returns (CancelItemResponse);
  rpc GetItemBids(GetItemBidsRequest) returns (GetItemBidsResponse);
}

message PlaceBidRequest {
  string item_id = 1;
  int64 amount = 2;
}

message PlaceBidResponse {
  Bid bid = 1;
}

message Bid {
  string id = 1;
  string item_id = 2;
  string user_id = 3;
  int64 amount = 4;
  string created_at = 5; // ISO 8601 string
}

// Item status enum
enum ItemStatus {
  ITEM_STATUS_UNSPECIFIED = 0;
  ITEM_STATUS_ACTIVE = 1;
  ITEM_STATUS_ENDED = 2;
  ITEM_STATUS_CANCELLED = 3;
}

// Item message
message Item {
  string id = 1;
  string title = 2;
  string description = 3;
  int64 start_price = 4;
  int64 current_highest_bid = 5;
  string end_at = 6; // ISO 8601 string
  string created_at = 7; // ISO 8601 string
  string updated_at = 8; // ISO 8601 string
  repeated string images = 9;
  string category = 10;
  string seller_id = 11;
  ItemStatus status = 12;
}

// CreateItem
message CreateItemRequest {
  string title = 1;
  string description = 2;
  int64 start_price = 3;
  string end_at = 4; // ISO 8601 string
  repeated string images = 5;
  string category = 6;
}

message CreateItemResponse {
  Item item = 1;
}

// GetItem
message GetItemRequest {
  string id = 1;
}

message GetItemResponse {
  Item item = 1;
}

// ListItems
message ListItemsRequest {
  int32 page_size = 1;
  string page_token = 2;
  string category = 3; // optional filter
}

message ListItemsResponse {
  repeated Item items = 1;
  string next_page_token = 2;
}

// ListSellerItems
message ListSellerItemsRequest {
  int32 page_size = 1;
  string page_token = 2;
}

message ListSellerItemsResponse {
  repeated Item items = 1;
  string next_page_token = 2;
}

// UpdateItem
message UpdateItemRequest {
  string id = 1;
  optional string title = 2;
  optional string description = 3;
  repeated string images = 4;
  optional string category = 5;
}

message UpdateItemResponse {
  Item item = 1;
}

// CancelItem
message CancelItemRequest {
  string id = 1;
}

message CancelItemResponse {
  Item item = 1;
}

// GetItemBids
message GetItemBidsRequest {
  string item_id = 1;
  int32 page_size = 2;
  string page_token = 3;
}

message GetItemBidsResponse {
  repeated Bid bids = 1;
  string next_page_token = 2;
}

